--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="primary">#4da8bb</color>
+    <color name="secondary">#fcda6e</color>
     <color name="hint">#A8A8A8</color>
 </resources>
