--- a/app/src/main/res/layout/activity_view_teams.xml
+++ b/app/src/main/res/layout/activity_view_teams.xml
@@ -17,7 +17,7 @@
         android:text="View Teams "
         android:textSize="25dp"
         android:textStyle="italic|bold"
-        android:textColor="@color/white"
+        android:textColor="@color/secondary"
         android:layout_gravity="center"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
