--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="primary">#4da8bb</color>
     <color name="secondary">#fcda6e</color>
     <color name="hint">#A8A8A8</color>
+    <color name="lightGrey">#FFFFFF</color>
+    <color name="duskYellow">#Ffd700</color>
 </resources>
